--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.10.0
   firebase_messaging: ^14.4.1
   cloud_firestore: ^4.5.3
+  firebase_database: ^10.1.1
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
