--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^4.5.3
   firebase_database: ^10.1.1
   shared_preferences:
+  firebase_analytics:
+  http:
 
 dev_dependencies:
   flutter_test:
